# ImgPDF2Map

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  heroku.yml  package-lock.json  package.json  startup.bat
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  __init__.py  dev.Dockerfile  main.py  prod.Dockerfile  prod.copy.Dockerfile  pyproject.toml  requirements.txt  setup.py  test.py
backend/GeorefTestFiles/: __init__.py  testproject.py
backend/GeorefTestFiles/testpoints/: tpImg1.json  tpgaldopiggenturkartp3.json
backend/Img2mapAPI/: Img2mapAPI.py  __init__.py
backend/Img2mapAPI/Helper/: FileHelper.py  FileStorage.py  ImageHelper.py  __init__.py
backend/Img2mapAPI/Managers/: georefrencer.py
backend/Img2mapAPI/Models/: __init__.py  point.py  pointList.py  project.py
backend/Img2mapAPI/Routers/: converters.py  georefProject.py  georeferencing.py
backend/Img2mapAPI/devOnly/: __init__.py
backend/Img2mapAPI/utils/: __init__.py  projectHandeler.py  projectHandler.py
backend/Old/modules/: __init__.py
backend/Old/routers/: __init__.py
backend/docker/: dev.Dockerfile  prod.Dockerfile
backend/img2mapAPI/: Img2mapAPI.py  __init__.py
backend/img2mapAPI/devOnly/: __init__.py
backend/img2mapAPI/routers/: __init__.py  converters.py  georefProject.py
backend/img2mapAPI/utils/: __init__.py  projectHandler.py
backend/localrepository/: projects.py
backend/modules/: __init__.py  converter.py  georeferenser.py  georefrencer.py  models.py
backend/routers/: __init__.py  converters.py  georeferencing.py
(+97 files in other folders)
